# AVS_HW2213

./: CMakeLists.txt  Read.md  ReadMe  main.cpp
data/: cartoon.cpp  cartoon.h  container.cpp  container.h  documentary.cpp  documentary.h  game.cpp  game.h  movie.cpp  movie.h
rnd_files/: rnd.cpp  rnd.h
testsIn/: test1  test2  test4
testsOut/: random_01  random_02  test1_01  test1_02  test2_01  test2_02  test4_01  test4_02  test5_01  test5_02
